remove AD author web

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,7 +2,7 @@
 
 aaron_dennis:
 	name: Aaron Dennis
-	web: http://aaronpdennis.github.io
+	web: 
 	email: aaron.p.dennis@gmail.com
 	bio: 
 	avatar: 
