--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title:            Aaron Dennis
 locale:           en_US
-url:              http://aaronpdennis.github.io
+url:              
 
 
 # Jekyll configuration
