--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,11 +1,20 @@
 # Authors
 
-aaron_dennis:
-	name: Aaron Dennis
-	web: 
-	email: aaron.p.dennis@gmail.com
-	bio: 
-	avatar: 
-	twitter: aaronpdennis
-	google:
-	  plus: 
+billy_rick:
+  name: Billy Rick
+  web: http://thewhip.com
+  email: billy@rick.com
+  bio: "What do you want, jewels? I am a very extravagant man."
+  avatar: bio-photo-2.jpg
+  twitter: extravagantman
+  google:
+    plus: BillyRick
+
+cornelius_fiddlebone:
+  name: Cornelius Fiddlebone
+  email: cornelius@thewhip.com
+  bio: "I ordered what?"
+  avatar: bio-photo.jpg
+  twitter: rhymeswithsackit
+  google:
+    plus: CorneliusFiddlebone
