referring other accounts

--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ owner:
   bio: "Pursuing quality in geospatial technology (let's call that cartography)."
   email: aaron.p.dennis@gmail.com
   disqus-shortname: 
-  twitter: #aaronpdennis
+  twitter: aaronpdennis
   facebook: 
   google:
     plus: #username
@@ -40,10 +40,10 @@ owner:
     ad-client: 
     ad-slot: 
   bing-verify: 
-  github: #aaronpdennis
+  github: aaronpdennis
   stackoverflow: #http://stackoverflow.com/users/123456/username
   linkedin: #username
-  instagram: #aa_dennis
+  instagram: aa_dennis
   lastfm: #username
   tumblr: #username
   pinterest: #username
