--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,6 +3,9 @@
 - title: About
   url: /about/
 
+- title: Portfolio
+  url: /porfolio/
+  
 - title: Soil Moisture Trends
   url: /soil-moisture-trends/
 
