issue in url path fixed

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,8 @@
   url: /about/
 
 - title: Portfolio
-  url: /porfolio/
-  
+  url: /portfolio/
+
 - title: Soil Moisture Trends
   url: /soil-moisture-trends/
 
