--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ kramdown:
 owner:
   name: Aaron Dennis
   avatar: bio-photo.jpg
-  bio: "Pursuing quality in geospatial technology (let's call that cartography)."
+  bio: ""
   email: aaron.p.dennis@gmail.com
   disqus-shortname: 
   twitter: aaronpdennis
