new post, other updates

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ kramdown:
 owner:
   name: Aaron Dennis
   avatar: bio-photo.jpg
-  bio: ""
+  bio: "Cartography and Geospatial Technology"
   email: aaron.p.dennis@gmail.com
   disqus-shortname: 
   twitter: aaronpdennis
