--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ owner:
   facebook: 
   google:
     plus: #username
-    analytics: 
+    analytics: UA-56254385-1
     verify: 
     ad-client: 
     ad-slot: 
