--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@
 - title: Portfolio
   url: /portfolio/
 
-- title: Soil Moisture Trends
+  - title: Soil Moisture Trends (in progress)
   url: /soil-moisture-trends/
 
 - title: Posts
